update README instructons

--- a/application.properties
+++ b/application.properties
@@ -17,7 +17,7 @@
 
 kafka.host=rover-cluster-kafka-bootstrap
 kafka.port=9092
-consumer.topic=uber
+consumer.topic=rover-gps,rover-metrics,rover-zonechange
 consumer.maxPollRecords=5000
 consumer.consumersCount=1
 consumer.seekTo=beginning
